# libosmocore

./: .gitignore  Makefile.am  configure.ac
include/: Makefile.am
include/osmocom/core/: Makefile.am  endian.h  md5.h  msgb.h
include/osmocom/gprs/: gprs_ns.h
include/osmocom/gsm/: gsm0480.h
include/osmocom/gsm/protocol/: Makefile.am
include/osmocom/vty/: vty.h
src/: Makefile.am  gsmtap_util.c  logging.c  logging_syslog.c  md5.c  msgb.c  msgfile.c  rate_ctr.c  signal.c  statistics.c  write_queue.c
src/ctrl/: control_if.c
src/gb/: gprs_ns.c  gprs_ns_frgre.c
src/gsm/: gsm0411_utils.c  gsm0480.c  lapd_core.c  lapdm.c  rsl.c
src/vty/: buffer.c  command.c  logging_vty.c  telnet_interface.c  utils.c  vector.c  vty.c
tests/: Makefile.am  testsuite.at
tests/fr/: fr_test.c  fr_test.err  fr_test.ok
tests/gb/: gprs_ns_test.c  gprs_ns_test.ok
tests/lapd/: lapd_test.c  lapd_test.ok
tests/md5/: Makefile.am  md5_test.c
tests/smc/: smc_test.c
tests/ussd/: ussd_test.c
utils/: Makefile.am
